crates/nota-tui/tests/snapshots/home_screen__home_empty.snap
---
source: crates/nota-tui/tests/home_screen.rs
expression: terminal.backend()
---
"╭─ ≈ nota ───────────────────────────────────────── ✓ ready ─╮"
"│                                                            │"
"│                                                            │"
"│            ⠀⣀⣀⣀⣀⣀⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                        │"
"│            ⠛⠉⠉⠉⠉⠉⠉⠛⠳⠶⣤⣀⡀⠀⠀⠀⠀⠀⢀⣀⣤⡴⠶⠛                        │"
"│            ⣤⠶⠶⠶⠶⠶⠶⣤⣄⣀⠀⠉⠙⠛⠛⠛⠛⠛⠋⠉⠀⢀⣀⣤                        │"
"│            ⠀⣀⣀⣀⣀⣀⣀⠀⠈⠉⠛⠶⢦⣤⣤⣤⣤⣤⡴⠶⠛⠋⠉⠀     n o t a            │"
"│            ⠛⠉⠉⠉⠉⠉⠉⠛⠳⠶⣤⣀⡀⠀⠀⠀⠀⠀⢀⣀⣤⡴⠶⠛                        │"
"│            ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠙⠛⠛⠛⠛⠛⠋⠉⠀⠀⠀⠀                        │"
"│                                                            │"
"│                                                            │"
"│ recent                                                     │"
"│   nothing recorded yet · R to record                       │"
"│                                                            │"
"│                                                            │"
"│                                                            │"
"│                                                            │"
"│                                                            │"
"│                                                            │"
"╰─ R last settings ─────────────────────────────── parakeet ─╯"
