crates/nota-tui/tests/snapshots/home_screen__home_ready.snap
---
source: crates/nota-tui/tests/home_screen.rs
expression: terminal.backend()
---
"╭─ ≈ nota ───────────────────────────────────────── ✓ ready ─╮"
"│                                                            │"
"│                                                            │"
"│            ⠀⣀⣀⣀⣀⣀⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                        │"
"│            ⠛⠉⠉⠉⠉⠉⠉⠛⠳⠶⣤⣀⡀⠀⠀⠀⠀⠀⢀⣀⣤⡴⠶⠛                        │"
"│            ⣤⠶⠶⠶⠶⠶⠶⣤⣄⣀⠀⠉⠙⠛⠛⠛⠛⠛⠋⠉⠀⢀⣀⣤                        │"
"│            ⠀⣀⣀⣀⣀⣀⣀⠀⠈⠉⠛⠶⢦⣤⣤⣤⣤⣤⡴⠶⠛⠋⠉⠀     n o t a            │"
"│            ⠛⠉⠉⠉⠉⠉⠉⠛⠳⠶⣤⣀⡀⠀⠀⠀⠀⠀⢀⣀⣤⡴⠶⠛                        │"
"│            ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠙⠛⠛⠛⠛⠛⠋⠉⠀⠀⠀⠀                        │"
"│                                                            │"
"│                                                            │"
"│ recent                                                     │"
"│   ✓ Woodwork workshop · hand planes         2h 42m  today  │"
"│ ▸ ✓ Sharpening · chisels                       41m  3 Oct  │"
"│     recovered after a crash · nothing lost                 │"
"│                                                            │"
"│                                                            │"
"│                                                            │"
"│                                                            │"
"╰─ r record  R last settings  ⏎ open ───────────── parakeet ─╯"
